# PalmShellRust

./: .env  Cargo.toml
src/: args_analysis.rs  builtins.rs  error.rs  executor.rs  main.rs  model_call.rs  parser.rs  prompt.rs  run.rs
