[package]
name = "PalmShellRust"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.42"
colorgrad = "0.7.0"
dotenvy = "0.15.7"
os_pipe = "1.2.3"
owo-colors = "4.2.3"
rand = "0.9.2"
reqwest = { version = "0.12.26" , features = ["json"]}
rustyline = "17.0.2"
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
whoami = "1.6.1"
